xml 수정 ranking 페이지 수정,중, 맵 예시 변경

--- a/lk/gameUIDesign/res/values/strings.xml
+++ b/lk/gameUIDesign/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="TotalRanking">Total Ranking</string>
     <string name="StageRanking">Stage Ranking</string>
     <string name="reset">RESET</string>
+    <string name="STAGE">STAGE</string>
 
 </resources>
