메인 화면 프로토 타입 완성.

--- a/lk/gameUIDesign/res/values/strings.xml
+++ b/lk/gameUIDesign/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="StageRanking">Stage Ranking</string>
     <string name="reset">RESET</string>
     <string name="STAGE">STAGE</string>
+    <string name="blank">blank</string>
 
 </resources>
