CoverFlow 추가! 진협이형 주석 표시 해놓은 곳에 DB에서 가져온 쿼리 넣으면 됨 ㅋ

--- a/lk/Sailing Text/res/values/strings.xml
+++ b/lk/Sailing Text/res/values/strings.xml
@@ -14,5 +14,7 @@
     <string name="blank">blank</string>
     <string name="newGame">New Game</string>
     <string name="loadGame">Load game</string>
+    <string name="topScore">Top Score</string>
+    <string name="topTime">Top Time</string>
 
 </resources>
