Option 추가, 옵션 내의 TextView까지 추가

--- a/lk/Sailing Text/res/values/strings.xml
+++ b/lk/Sailing Text/res/values/strings.xml
@@ -16,5 +16,8 @@
     <string name="loadGame">Load game</string>
     <string name="topScore">Top Score</string>
     <string name="topTime">Top Time</string>
-
+	<string name="Story">Story</string>
+	<string name="Credit">Credit</string>
+	<string name="Sound">Sound</string>
+	<string name="Tutorial">Tutorial</string>
 </resources>
