--- a/merge/ddd/res/values/strings.xml
+++ b/merge/ddd/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
 
-    <string name="app_name">DimensionDriveDownside</string>
+    <string name="app_name">SailingText</string>
 
 </resources>
